--- a/Group2_SAD/pom.xml
+++ b/Group2_SAD/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mycompany</groupId>
-    <artifactId>Group2_SAD</artifactId>
+    <groupId>it.sad.group2</groupId>
+    <artifactId>arsnova-app</artifactId>
     <version>0.1</version>
     <packaging>jar</packaging>
     
@@ -39,10 +39,21 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-fontawesome-pack</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
     
     <build>
         <plugins>
+            
             <!-- Compiler plugin -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -62,11 +73,13 @@
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>sadprojectwork.PaintTest</mainClass>
+                            <mainClass>sadprojectwork.PaintApp</mainClass>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+            
         </plugins>
     </build>
+    <name>ArsNova</name>
 </project>
