--- a/Group2_SAD/pom.xml
+++ b/Group2_SAD/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-bootstrapicons-pack</artifactId>
+            <version>12.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
             <version>12.4.0</version>
         </dependency>
@@ -91,5 +96,5 @@
         </plugins>
     </build>
 
-    <name>ArsNova</name>
+    <name>ArsNovaBackup</name>
 </project>
